[B]Version 7.0.0[/B]
Rebrand pvr.dvblink to pvr.tvmosaic
Fixed: TV Mosaic connection

[B]Version 2.2.2[/B]
Fixed: PVR_TIMER.iClientIndex handling bug

[B]Version 2.2.1[/B]
Fixed: Did not build

[B]Version 2.2.0[/B]
Fixed: Crash on startup with search timers
Fixed: Incorrect disk space display if disk size is more than 2TB
Fixed: Doesn't build with tinyxml2 4.x
Added: transcoded recordings playback in DVBLink v6
 
[B]Version 2.1.10[/B]
Updated: language files from Transifex

[B]Version 2.1.9[/B]
Updated: language files from Transifex

[B]Version 2.1.8[/B]
Updated: language files from Transifex

[B]Version 2.1.7[/B]
Updated: language files from Transifex

[B]Version 2.1.6[/B]
Updated: language files from Transifex

[B]Version 2.1.5[/B]
Fixed: Incorrect date/time presentation on Timer rules page

[B]Version 2.1.4[/B]
Updated: language files from Transifex

[B]Version 2.1.3[/B]
Updated: language files from Transifex

[B]Version 2.1.2[/B]
Updated: language files from Transifex

[B]Version 2.1.1[/B]
Updated: language files from Transifex

[B]Version 2.1.0[/B]
Added: upcoming channel logo support

[B]Version 2.0.4[/B]
Updated: language files from Transifex

[B]Version 2.0.3[/B]
Updated: language files from Transifex

[B]Version 2.0.2[/B]
- kodi.guilib is mandatory, enforce it

[B]Version 2.0.1[/B]
Updated: language files from Transifex

[B]Version 2.0.0[/B]
Added: Backport of 1.10.9 version fixes from Isengard tree
Added: Native Kodi Jarvis series timer support
Added: Support for keyword-based recording timers
Added: episode/season/year info to recording metadata

[B]Version 1.11.6[/B]
Updated to PVR API v4.1.0

[B]Version 1.11.5[/B]
Updated to PVR API v4.0.0

[B]Version 1.11.4[/B]
Updated to PVR API v3.0.0 (API 1.9.7 Compatibility Mode)

[B]Version 1.11.3[/B]
Updated to PVR API v2.1.0
Automatically fill in platform and library name

[B]Version 1.11.2[/B]
Debian packaging: fix library install path
Miscellaneous backend fixes

[B]Version 1.11.1[/B]